--- a/style/contact.css
+++ b/style/contact.css
@@ -2,69 +2,123 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: rgb(98, 89, 89);
+    /* background-color: rgb(18, 101, 18); */
     color:black;
 }
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 15px 0;
-    text-align: center;
-}
-nav {
-    background-color: #4caf50;
-    padding: 10px;
-    text-align: center;
-}
-nav a {
-    color: #fff;
-    text-decoration: none;
-    padding: 10px;
-    margin: 0 10px;
-}
-section {
-    padding: 20px;
-    margin: 20px 0;
-}
-h2 {
-    color: #333;
-    text-align: center;
-}
+
 .text{
     text-decoration: none;
+    color: white;
 }
 
-.social-icons{
-    margin-top: 15px;
-  }
-  
-  .social-icons a{
-    text-decoration: none;
-    font-size: 25px;
-    margin-right: 15px;
-    color: #1a191a;
-    display: inline-block;
-    transition: transform 0.5s;
-  }
-
-  .contact{
-    flex-basis: 35%;
-    margin-left:50px;
-  }
+.container{
+  background-image: url("/bg_image.jpeg");
+  height: auto;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover; 
+}
+.row{
+  height: 618px;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
  
-  .contact p{
-    margin-top: 30px;
-    /* margin-left: 30px; */
-  }
   
-  
-  .contact p i{
-    color: rgb(123, 123, 237);
-    margin-right: 15px;
-    font-size: 25px;
-  }
-  .mailing{
-    margin-left: 12px;
-  }
+}
+.contact-left{
+  color: whitesmoke;
+  flex-basis: 30%;
+  margin-left: 50px;
+}
+.contact-right{
+  flex-basis: 60%;
+}
 
+.contact-left p{
+  margin-top: 30px;
+  /* margin-left: 30px; */
+}
+
+
+.contact-left p i{
+  color: rgb(123, 123, 237);
+  margin-right: 15px;
+  font-size: 25px;
+}
+.contact-left p a{
+  text-decoration: none;
+  color: whitesmoke;
+}
+
+
+.social-icons{
+  margin-top: 15px;
+}
+
+.social-icons a{
+  text-decoration: none;
+  font-size: 25px;
+  margin-right: 15px;
+  color: #abaaab;
+  display: inline-block;
+  transition: transform 0.5s;
+}
+.social-icons a:hover{
+  color: blueviolet;
+  transform: translateY(-5px);
+}
+
+.contact-right form{
+  margin-top: 60px;
+  width: 90%;
+}
+
+form input, form textarea{
+  width: 80%;
+  border: 0;
+  outline: none;
+  background: #262626;
+  padding: 15px;
+  margin: 15px 0;
+  color: #fff;
+  font-size: 18px;
+  border-radius: 6px;
+}
+
+.contact-right .btn{
+  background-color: black;
+  display: inline-block;
+  color: white;
+  /* margin: 50px auto; */
+  width: fit-content;
+  border: 2px solid rgb(37, 36, 39);
+  border-radius: 6px;
+  text-decoration: none;
+  transition:background 0.5s; 
+}
+
+form .btn2{
+  padding: 14px 40px;
+  margin: 50px auto;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+form .btn2:hover{
+  background: rgb(59, 58, 58);
+}
+
+.copyright{
+
+  width: 100%;
+  margin-top: 20px;
+  text-align: center;
+  padding: 25px 0;
+  background: #464545;
+  font-weight: 600;
+}
+.copyright i{
+  color: red;
+}
 
