--- a/ai-recipe-generator/styles.css
+++ b/ai-recipe-generator/styles.css
@@ -57,7 +57,7 @@ body {
     font-size: 18px;
     font-weight: 600;
     color: #292f36;
-    background-color: #4ecdc4;
+    background-color: #21c063;
     border-radius: 48px;
     border: none;
     padding: 16px 24px;
