--- a/style/home.css
+++ b/style/home.css
@@ -59,7 +59,7 @@ nav a:hover{
     height: 650px;
     position: relative;
     /* height: 100%; */
-    background-image: url(/background-image.jpg);
+    background-image: url("../background-image.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
